<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emergencia2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.vega.patricio.com.maqueta2.Emergencia2Activity"
    android:background="@color/colorPrimaryDark"
    >

 <Button
        android:id="@+id/ladron_dentro_casa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ladron_dentro_decasa"
        android:background="@color/colorAccent"
        android:layout_marginBottom="21dp"
        android:textColorHint="@color/colorTexto"


        android:layout_above="@+id/evolver"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/evolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/volver"
        android:background="@color/colorVolver"
        android:textColorHint="@color/colorTexto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ladron_fuera_decasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:hint="@string/ladron_fuera_decasa"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorTexto"


        android:layout_above="@+id/ladron_dentro_casa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/estoy_amarrado_encasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:hint="@string/estoy_amarrado_encasa"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorTexto"


        android:layout_marginBottom="11dp"
        android:layout_above="@+id/estoy_oculto_encasa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/estoy_oculto_encasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estoy_oculto_encasa"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorTexto"


        android:layout_marginBottom="11dp"
        android:layout_above="@+id/ladron_fuera_decasa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/sospechoso_ensector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:hint="@string/sospechoso_en_sector"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorTexto"


        android:layout_above="@+id/estoy_amarrado_encasa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <Button
        android:id="@+id/casa_vulnerada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorTexto"
        android:hint="@string/casa_vulnerada"
        android:layout_above="@+id/sospechoso_ensector"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />




</RelativeLayout>
