<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_aviso2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.vega.patricio.com.maqueta2.Aviso2Activity"
    android:background="@color/colorPrimaryDark"
    >



    <Button
        android:id="@+id/aviso_volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/volver"
        android:background="@color/colorVolver"
        android:textColorHint="@color/colorTexto"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/avisoladron_fuera_decasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ladron_fuera_decasa"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorTexto"
        android:layout_above="@+id/ladron_dentroaviso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/avisosospechoso_ensector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sospechoso_en_sector"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorTexto"
        android:layout_above="@+id/avisoladron_fuera_decasa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />


    <Button
        android:id="@+id/avisocasa_vulnerable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/casa_vulnerada"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorTexto"
        android:layout_above="@+id/avisosospechoso_ensector"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/ladron_dentroaviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ladron_dentro_de_casa"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorTexto"

        android:layout_marginBottom="14dp"
        android:layout_above="@+id/aviso_volver"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
